--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <footer>
         <div id="info-box" class="info-box">
             <div id="text-info-box" class="text-info-box">
-            <img src="https://cdn.discordapp.com/attachments/1134897274024116295/1176177755663126558/larger_banner.png" class="logo" alt="Map Icon">
+            <img src="assets/PxD_Banner.gif" logo" alt="Map Icon">
               <h2>Left-click to add temporary markers</h2>
               <h2>Ctrl+Left-click to remove them</h2><br>
               For questions, support, or feedback, visit us on Discord!<br>
